--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
+
     <button
       class="navbar-toggler"
       type="button"
@@ -12,11 +13,42 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+
+    <% if(!username){ %>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="/urls">My URLs</a>
+          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        </div>
+  
+        <form class="form-inline ml-auto" action="/login" method="POST">
+          <div class="form-group mx-auto">
+            <input
+              class="form-control"
+              type="text"
+              name="username"
+              placeholder="username"
+              style="width: 150px; margin: 1em"
+            />
+            <button type="submit" class="btn btn-secondary">sign in</button>
+          </div>
+        </form>
       </div>
-    </div>
+    <% } else{ %>  
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="/urls">My URLs</a>
+          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        </div>
+  
+        <form class="form-inline ml-auto" action="/logout" method="POST">
+          <div class="form-group">
+            <label class="mr-5">Logged in as: <%= username %></label>
+            <button type="submit" class="btn btn-outline-dark">logout</button>
+          </div>
+        </form>
+      </div>
+   <% } %>
+
   </nav>
 </header>
